--- a/.gitignore
+++ b/.gitignore
@@ -1,62 +1,35 @@
 *~
+.DS_Store
 .svn
 .cvs
-.git
-.listing
 *.bak
 *.swp
-*.log
-plugins/wp-file-cache/cache
-cache
-_wpeprivate
-.cache
-temp
-tmp
-*.tmp
-imagecache*
-uploads*
-*_backup
-gt-cache
-ics-importer-cache
-wp-config-sample.php
-wp-content/w3tc*
-wp-content/w3-*
-wp-content/plugins/wpengine-snapshot/snapshots/*
-wp-content/uploads/snapshots
-wp-content/themes/thesis*/custom/cache
-wp-content/themes/thesis*/lib/scripts/cache
-wp-content/themes/*/cache
-wp-content/plugins/*/cache
-wp-content/w3tc-bak
-wp-content/backup*
-wp-content/temp*
-wp-content/debug.log
-wp-content/backups
-wp-content/managewp
+Thumbs.db
+
+# wordpress specific
+wp-config.php
+wp-content/uploads/
+wp-content/blogs.dir/
 wp-content/upgrade/*
-wp-content/uploads
-wp-content/blogs.dir/*/*
-pclzip-*
+wp-content/backup-db/*
+wp-content/advanced-cache.php
+wp-content/wp-cache-config.php
+wp-content/cache/*
+wp-content/cache/supercache/*
 
-# WordPress debugging files
-log.txt
-debug.log
+# wpengine specific
+.smushit-status
+.gitattributes
+_wpeprivate
+wp-content/object-cache.php
+wp-content/mu-plugins/mu-plugin.php
+wp-content/mu-plugins/slt-force-strong-passwords.php
+wp-content/mu-plugins/limit-login-attempts
+wp-content/mu-plugins/wpengine-common
+wp-content/mysql.sql
 
-# Gallaries in various places
-gallery/*
-wp-content/gallery/*
-wp-content/album/*
-
-# Found in 'sneakernews' - probably just a backup but never going to be good to include
-wp-content/plugins/plugins
-
-# Found in the root of pod-1009
-.a
-
-# Forum software we probably shouldn't support anyway
-forum/*
-
-# known large file types
+# large/disallowed file types
+# a CDN should be used for these
 *.hqx
 *.bin
 *.exe
@@ -89,7 +62,3 @@ forum/*
 *.asf
 *.wmv
 *.avi
-*.zip
-*.tar
-*.tgz
-*.gz
